# mltgnt

./: .importlinter  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  test.yml
skills/browse/: SKILL.md  browse.py  extractor.py  fetcher.py  searcher.py
src/mltgnt/: __init__.py  __main__.py  exceptions.py
src/mltgnt/agent/: __init__.py  _parse.py  _runner.py  hooks_adapter.py
src/mltgnt/bridges/: __init__.py  audit_adapter.py  files_adapter.py  ghdag_bridge.py  hooks_adapter.py  llm_adapter.py
src/mltgnt/chat/: __init__.py  models.py  pipeline.py
src/mltgnt/cli/: main.py  run.py
src/mltgnt/config/: __init__.py
src/mltgnt/daemon/: __init__.py  _pidlock.py  _runner.py  _skill_watcher.py
src/mltgnt/improvement/: __init__.py  __main__.py  analyzer.py  loop.py  proposal.py  reporter.py
src/mltgnt/interfaces/: __init__.py  chat.py  ooda.py  persona.py  skill.py  slack.py  types.py
src/mltgnt/kpi/: __init__.py  __main__.py  _metrics.py  _parser.py
src/mltgnt/memory/: __init__.py  _agentic.py  _compaction.py  _embedding.py  _format.py  _iterative.py  _scoring.py  _sufficiency.py  _tfidf.py  api.py  compaction.py  search.py
src/mltgnt/ooda/: __init__.py  audit_source.py  exec_dispatcher.py  runner.py
src/mltgnt/persona/: __init__.py  compress.py  frontmatter.py  loader.py  registry.py  rules.py  runner.py  schema.py  triage.py
src/mltgnt/routing/: __init__.py  channel_router.py  triage.py
src/mltgnt/scheduler/: __init__.py  fanout.py  ghdag_bridge.py  loader.py  models.py  runner.py  state.py
src/mltgnt/scheduler/actions/: skill.py
src/mltgnt/skill/: __init__.py  _registry.py  estimator.py  lint.py  loader.py  matcher.py  models.py  runner.py
tests/: conftest.py  test_agentic.py  test_all_snapshot.py  test_audit_adapter.py  test_channel_router.py  test_chat_pipeline.py  test_compaction.py  test_config.py  test_daemon.py  test_deprecation_warnings.py  test_embedding.py  test_exceptions.py  test_fanout_integration.py  test_files_adapter.py  test_ghdag_bridge.py  test_ghdag_version.py  test_hooks_adapter.py  test_iterative.py  test_memory.py  test_memory_public_api.py  test_memory_relevance.py  test_ooda_audit_source.py  test_ooda_exec_dispatcher.py  test_ooda_runner.py  test_packaging.py  test_persona.py  test_routing.py  test_routing_evaluate.py  test_routing_triage.py  test_scheduler.py  test_scoring.py  test_skill_estimator.py  test_skill_registry_watcher.py  test_sufficiency.py  test_tfidf.py  test_v0100_breaking.py  test_v080_breaking.py  test_version.py
tests/agent/: test_runner.py
tests/chat/: test_pipeline.py
tests/cli/: test_exit_codes.py  test_main.py  test_run.py
tests/improvement/: __init__.py  test_analyzer.py  test_loop.py  test_proposal.py  test_reporter.py
tests/interfaces/: test_chat_protocol.py  test_persona_protocol.py  test_types.py
tests/kpi/: test_cli.py  test_metrics.py
tests/persona/: test_compress.py  test_deprecation_warning.py  test_loader.py  test_runner.py  test_schema_no_review.py  test_triage.py
tests/test_browse/: test_browse_cli.py  test_extractor.py  test_fetcher.py  test_searcher.py
tests/test_skill/: conftest.py  test_lint.py  test_loader.py  test_loader_208.py  test_matcher.py  test_matcher_208.py  test_models.py  test_runner.py  test_slash_command_dispatch.py
tests/tools/mltgnt_fugu/: test_dag_bridge.py  test_strategy_flat.py  test_strategy_recursive.py  test_types.py
tools/: lint-boundary.sh
tools/mltgnt_fugu/: dag_bridge.py  types.py
tools/mltgnt_fugu/mltgnt_strategy/: base.py
