[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mltgnt"
version = "0.4.3"
description = "マルチエージェントの型契約とチャット入出力"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "sumipan" }]
keywords = ["persona", "secretary", "slack", "llm", "multi-agent"]
dependencies = [
    "PyYAML>=6.0",
    "scikit-learn>=1.0",
    "numpy>=1.21",
    "ghdag @ git+https://github.com/sumipan/ghdag.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "freezegun>=1.2",
]

[project.urls]
Homepage = "https://github.com/sumipan/mltgnt"
Issues = "https://github.com/sumipan/mltgnt/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mltgnt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
